@@ -45,15 +45,15 @@ except ImportError:
 #  - SHA1 sum of package
 archives = [
     ('Xapian core',
-     'http://xappy.googlecode.com/files/xapian-core-14486.tgz',
+     'http://xappy.googlecode.com/files/xapian-core-14516.tgz',
      'xapian-core.tgz',
-     'b12d48cbf58a8fa74c77390b7afdbdd504b5a350',
+     '157d8ad0baa8b77387eaa8a224858f544ba25560',
      'xapian-core',
     ),
     ('Xapian bindings',
-     'http://xappy.googlecode.com/files/xapian-bindings-14486.tgz',
+     'http://xappy.googlecode.com/files/xapian-bindings-14516.tgz',
      'xapian-bindings.tgz',
-     '5addd7cc247d8297ebd89cf4bd140226e9cb651d',
+     'fcbae1cc00dfff1c4d953bf483c881a6fae14ebc',
      'xapian-bindings',
     ),
     ('Xapian win32 build system',
